Move the utils to recompile the samples into a dedicated (hidden) folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 melba-sample-*.tex
 melba-sample.pdf
 
+latex/.tools/*.pdf
+latex/.tools/*.tex
+latex/.tools/melba.sty
+latex/.tools/sample.bib
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
